--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <body>
     <div>
         You did not Provide a Asset File, Please Provide a Correct Asset File to fetct.
+        Decompiler Info: "/Decompiler"
+    
     </div>
+    <script>
+        console.log(window)
+    </script>
 </body>
