--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <body>
     <div>
-        You did not Provide a Asset File, Please Provide a Correct Asset File to fetct.
+        You did not Provide a Asset File, Please Provide a Correct Asset File to fetch.
         Decompiler Info: "/Decompiler"
     
     </div>
-    <script>
-        console.log(window)
-    </script>
 </body>
