--- a/Decompiler/index.html
+++ b/Decompiler/index.html
@@ -1,1 +1,3 @@
-<body><div>Loading Decompiler Web Assembly Content Please Wait...</div></body><script>var g = {[0]:"https://",[1]:"raw.githubusercontent.com",[2]:"/223Win/",[3]:"Luau-Decompiler",[4]:"/main/Decompiler/index.wasm"};var d=g[0]+g[1]+g[2]+g[3]+g[4];const x = new XMLHttpRequest();x.onreadystatechange=()=>{if(x.readyState==4){document.body.getElementsByTagName("div").item(0).innerText=x.response }};x.open("GET",d);x.send()</script>
+<script>
+  location.replace("https://223win.github.io/Luau-Decompiler/Decompiler/Content.wasm")
+</script>
