--- a/Decompiler/index.html
+++ b/Decompiler/index.html
@@ -1,3 +1,3 @@
 <script>
-  location.replace("https://223win.github.io/Luau-Decompiler/Decompiler/Content.wasm")
+  location.href = "https://223win.github.io/Luau-Decompiler/Decompiler/Content.wasm"
 </script>
