--- a/Decompiler/index.html
+++ b/Decompiler/index.html
@@ -1,3 +1,4 @@
-<script>
-  location.href = "https://223win.github.io/Luau-Decompiler/Decompiler/Content.wasm"
-</script>
+<head>
+  <meta http-equiv="refresh" content="0; URL='https://223win.github.io/Luau-Decompiler/Decompiler/Content.wasm'" />
+</head>
+
