--- a/Decompiler/DecompileTesting/index.html
+++ b/Decompiler/DecompileTesting/index.html
@@ -1,4 +1,9 @@
 <body></body>
 <script>
-    document.body.innerText = "tests"
+    fetch("223win.github.io/Luau-Decompiler/Decompiler/DecompileTesting/Test.txt").then((res) => {
+        res.text().then((val) => {
+            document.body.innerText = val
+        })
+    })
+    
 </script>
