--- a/Decompiler/DecompileTesting/index.html
+++ b/Decompiler/DecompileTesting/index.html
@@ -1,6 +1,6 @@
 <body></body>
 <script>
-    fetch("223win.github.io/Luau-Decompiler/Decompiler/DecompileTesting/Test.txt").then((res) => {
+    fetch("http://223win.github.io/Luau-Decompiler/Decompiler/DecompileTesting/Test.txt").then((res) => {
         res.text().then((val) => {
             document.body.innerText = val
         })
