--- a/Decompiler/DecompileTesting/index.html
+++ b/Decompiler/DecompileTesting/index.html
@@ -1,6 +1,4 @@
-<body>
-      ΪvB  L؁  :5繰
-    1' R ; ,J j ',s$ Q J58 < Z c. \=5ÕTKJ  u   e  L r * Q/bF(S M *   - * | D O s ]"  -'M |;  kўu C DG 
-    E5(E J! !
-    b@ " H H  ' :6        ']!%P ' |  &  Qt /     ֡I   ´{8 l .  	K    {B N Uڹ ga] D      b W ߕQ- җ  )@2 Bn#l f  `a +~ 9 ` -  !й c=  y Z    = | r|
-</body>
+    ΪvB  L؁   :5繰
+ 1'    R ; ,J j    ',s$  Q  J58   < Z    c. \ = 5ÕTKJ  u     e         L r * 	Q/bF(S 
+  M *     -   *  |     D O s   ]"    -'M    |;    kўu   C
+DG  E5(E    J! ! b@  " H H  ' :6        ']!%P ' |  &  Qt /     ֡I   ´{8 l .  	K    {B N Uڹ ga] D      b W ߕQ- җ  )@2 Bn#l f  `a +~ 9 ` -  !й c=  y Z    = | r|
